src/styles.css
@import 'tailwindcss';

@theme {
	--font-fredoka: 'Fredoka', sans-serif;
	--font-nunito: 'Nunito', sans-serif;
	--font-mochiy: 'Mochiy Pop One', sans-serif;
	--animate-bounce-in:
		fade 0.15s reverse forwards,
		expand 0.15s cubic-bezier(0.43, -0.5, 0.62, 1.5) forwards;
	--animate-intro: fade 0.25s reverse forwards, expand 0.5s forwards;
	--animate-page: fade reverse 0.15s fowards;
	--ease-bounce: cubic-bezier(0.43, -0.5, 0.62, 2);
	--radius-10\%: 10%;
	--radius-100\%: 100%;

	@keyframes fade {
		from {
			opacity: 1;
		}
		to {
			opacity: 0;
		}
	}
	@keyframes expand {
		from {
			transform: scale(0.5);
		}
		to: {
			transform: scale(1);
		}
	}
}

* {
	box-sizing: border-box;
}

:root {
	font-synthesis: none;
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	-webkit-text-size-adjust: 100%;
	@apply font-nunito;
}

body,
#root {
	position: absolute;
	inset: 0;
	display: flex;
}

button {
	&:focus-visible {
		outline-offset: 4px;
	}
	&:hover {
		cursor: pointer;
	}
	&:disabled {
		cursor: not-allowed;
	}
}

/* Hide number spin buttons in WebKit browsers */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
	-webkit-appearance: none;
	margin: 0;
}

/* Hide number spin buttons in Firefox */
input[type='number'] {
	-moz-appearance: textfield;
	appearance: textfield;
}

@media (prefers-reduced-motion) {
	* {
		transition: none !important;
		animation-duration: 0s !important;
	}
}

.disable-animations * {
	transition: none !important;
	animation-duration: 0s !important;
}

/* "over" variant that adds styles for both :hover and :focus-visible */
@custom-variant over {
	@media (hover: hover) {
		&:hover:not(:disabled) {
			@slot;
		}
	}
	&:focus-visible:not(:disabled) {
		@slot;
	}
}

/* "data-over" variant that adds styles for both [data-hover] and [data-focus] */
@custom-variant data-over {
	&[data-hover] {
		@slot;
	}
	&[data-focus] {
		@slot;
	}
}

/* border radius values to create a slime shape */
@utility rounded-slime {
	border-top-left-radius: 100% 150%;
	border-top-right-radius: 100% 150%;
	border-bottom-left-radius: 100% 50%;
	border-bottom-right-radius: 100% 50%;
}

/* smooths images when object-fit: cover is used */
@utility smooth-image {
	overflow-clip-margin: unset;
}

@utility bg-alpha-checkerboard {
	--square-size: 8px;
	--color-1: var(--color-neutral-200);
	--color-2: white;
	background-position:
		0px 0px,
		var(--square-size) var(--square-size);
	background-size: calc(var(--square-size) * 2) calc(var(--square-size) * 2);
	background-image:
		linear-gradient(
			45deg,
			var(--color-2) 25%,
			transparent 25%,
			transparent 75%,
			var(--color-2) 75%,
			var(--color-2) 100%
		),
		linear-gradient(
			45deg,
			var(--color-2) 25%,
			var(--color-1) 25%,
			var(--color-1) 75%,
			var(--color-2) 75%,
			var(--color-2) 100%
		);
}

@utility animated-tab-panel {
	/* Transition setup */
	transition-property: opacity, translate;
	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
	transition-duration: 300ms;

	/* Default opacity/sliding effect (from/to the left) */
	:has(> [data-previous]) > & {
		opacity: 0;
		translate: -100%;
	}

	/* Sliding from/to the right */
	:is([data-previous], [data-open]) ~ & {
		translate: 100%;
	}

	/* Enter state */
	&[data-enter] {
		opacity: 100%;
		translate: 0;
	}

	/* Prevent stacking */
	&:not([data-open]) {
		position: absolute;
		inset: 0;
	}
}

@utility dark-container {
	@apply rounded-2 border border-zinc-500 bg-linear-to-b from-zinc-800/90 to-zinc-900/90 inset-shadow-[0_5px_15px_5px_#0002] outline-2 outline-zinc-900/50;
}

@utility light-container {
	@apply rounded-2 border border-white bg-zinc-200 bg-linear-to-b from-zinc-100 to-zinc-200 outline-2 outline-white/50;
}

@utility input-wrapper {
	@apply flex w-full overflow-hidden rounded-2 border-2 border-zinc-300 bg-white px-2 py-1 text-left outline outline-offset-0! outline-white has-data-focus:outline-4 has-data-focus:-outline-offset-2! has-data-focus:outline-lime-600 data-focus:outline-4 data-focus:-outline-offset-2! data-focus:outline-lime-600 data-open:outline-4 data-open:-outline-offset-2! data-open:outline-lime-600;
}

@utility input-wrapper-focus-visible {
	@apply has-focus-visible:outline-4 has-focus-visible:-outline-offset-2! has-focus-visible:outline-lime-600!;
}

@utility input-wrapper-over {
	@apply over:outline-4 over:-outline-offset-2! over:outline-lime-600!;
}

@utility input-wrapper-has-hover {
	@apply has-hover:outline-4 has-hover:-outline-offset-2! has-hover:outline-lime-600;
}

@utility input-class {
	@apply outline-none placeholder:text-zinc-400;
}

@utility input-label {
	@apply text-3.5 font-bold;
}

@utility input-select-option {
	@apply flex cursor-pointer rounded-1 border border-zinc-400 bg-zinc-200 px-1.5 py-0.5 font-semibold text-zinc-500 -outline-offset-1! outline-lime-600 data-checked:border-black data-checked:bg-zinc-700! data-checked:text-white! data-checked:text-shadow-[0_1px_#0006] data-over:bg-lime-200 data-over:text-lime-800 data-over:outline-3;
}

@utility dark-menu {
	@apply z-100 flex max-h-(--popover-available-height) min-w-36 flex-col overflow-hidden dark-container rounded-2 p-1.5 font-semibold shadow-[0_5px_10px_#0008] backdrop-blur-sm;
}

@utility dark-menu-item {
	@apply flex cursor-pointer items-center gap-2 rounded-1 px-2 py-1 text-white outline-offset-0! drop-shadow-[0_1px_black] outline-none select-none aria-disabled:text-zinc-400 data-active-item:bg-white data-active-item:text-zinc-800;
}

@utility dark-menu-item-danger {
	@apply text-rose-300! data-active-item:bg-rose-300! data-active-item:text-rose-950!;
}

@utility dark-menu-group-label {
	@apply text-3 font-bold text-zinc-400 uppercase select-none text-shadow-[0_1px_black];
}

@utility mini-menu-item {
	@apply flex cursor-pointer items-center gap-2 rounded-2 px-2 py-1 text-left outline-stone-400 data-active-item:bg-stone-200 data-active-item:font-medium data-focus:outline-2 data-over:bg-stone-200 data-over:font-medium;
}

@utility rounded-* {
	border-radius: --spacing(--value(number));
}

@utility rounded-b-* {
	border-bottom-right-radius: --spacing(--value(number));
	border-bottom-left-radius: --spacing(--value(number));
}

@utility rounded-t-* {
	border-top-right-radius: --spacing(--value(number));
	border-top-left-radius: --spacing(--value(number));
}

@utility rounded-s-* {
	border-start-start-radius: --spacing(--value(number));
	border-end-start-radius: --spacing(--value(number));
}

@utility rounded-e-* {
	border-start-end-radius: --spacing(--value(number));
	border-end-end-radius: --spacing(--value(number));
}

@utility rounded-r-* {
	border-top-right-radius: --spacing(--value(number));
	border-bottom-right-radius: --spacing(--value(number));
}

@utility rounded-l-* {
	border-top-left-radius: --spacing(--value(number));
	border-bottom-left-radius: --spacing(--value(number));
}

@utility rounded-ss-* {
	border-start-start-radius: --spacing(--value(number));
}

@utility rounded-se-* {
	border-start-end-radius: --spacing(--value(number));
}

@utility rounded-ee-* {
	border-end-end-radius: --spacing(--value(number));
}

@utility rounded-es-* {
	border-end-start-radius: --spacing(--value(number));
}

@utility rounded-tl-* {
	border-top-left-radius: --spacing(--value(number));
}

@utility rounded-tr-* {
	border-top-right-radius: --spacing(--value(number));
}

@utility rounded-br-* {
	border-bottom-right-radius: --spacing(--value(number));
}

@utility rounded-bl-* {
	border-bottom-left-radius: --spacing(--value(number));
}

@utility text-* {
	font-size: --spacing(--value(number));
}

